FUncionalidade de editar currículo e apagar usuário adicionada.
