# curriculum-elkas-backend/config/swaggerDocument.yaml
@@ -162,6 +162,31 @@ paths:
           description: Já existe um usuário com o username cadastrado!
           schema:
             $ref: "#/definitions/ApiResponse"
+    delete:
+      tags:
+         - Users
+      summary: Remove um usuário e os respectivos currículos
+      description: Apaga a Conta no Sistema
+      operationId: user.destroy
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      security:
+        - Bearer: []
+      parameters:
+        - name: username
+          in: path
+          description: O username do usuário
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Sucesso!
+        '404':
+          description: Usuário não encontrado!
+        '500':
+          description: Erro interno no servidor!
   /users/signin:
     post:
       tags:
@@ -447,6 +472,10 @@ paths:
       responses:
         "200":
           description: Sucesso!
+        '404':
+          description: Curriculum não encontrado!
+        '500':
+          description: Erro interno no servidor!
 definitions:
   Credentials:
     type: object
